src/objects/Opportunity_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity_Create_Date__c</fullName>
        <label>Opportunity Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Snapshot_Create_Date__c</fullName>
        <label>Snapshot Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00 - Discovery</fullName>
                </value>
                <value>
                    <fullName>01 - Initial Demo</fullName>
                </value>
                <value>
                    <fullName>02 - Additional Demos</fullName>
                </value>
                <value>
                    <fullName>03 - Business Case</fullName>
                </value>
                <value>
                    <fullName>04 - Proposal</fullName>
                </value>
                <value>
                    <fullName>05 - Formal Evaluation</fullName>
                </value>
                <value>
                    <fullName>06 - Contract Negotiation</fullName>
                </value>
                <value>
                    <fullName>07a - Closed Won</fullName>
                </value>
                <value>
                    <fullName>07b - Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_Amount__c</fullName>
        <label>Sum of Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Opportunity Snapshot</label>
    <nameField>
        <label>Opportunity Snapshots Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>